# Android_3D_3rdPerson_Game

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/peasant_girl/: untitled.gltf
app/src/main/assets/models/sophie/: Jump.dae  Jumping.dae  catwalk.dae
app/src/main/assets/models/sophie/anim/: JogForward.dae  NinjaIdle.dae  SlowRun.dae  jogging.dae
app/src/main/assets/shaders/: BasicGeom.fs  BasicGeom.vs  BasicGeomInstance.vs  BasicGeomMultiTexture.fs  UI_Quad.fs  UI_Quad.vs  atlas.fs  ground_plane.fs  ground_plane.vs  mainFragment.glsl  mainVertex.glsl  model.fs  model.vs  modelAnim.vs  simple.fs  simple.vs  text.fs  text.vs
app/src/main/cpp/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  BasicGeometryMesh.cpp  BasicGeometryMesh.h  Bone.cpp  Bone.h  BoneInfo.h  CMakeLists.txt  Camera.cpp  Camera.h  Content.h  Mesh.h  Model.cpp  Model.h  Physics.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRender.h  TextureAsset.cpp  TextureAsset.h  Threading.h  UI.h  global.h  main.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
